k8s/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: whisper-strip-prefix
  namespace: fasterwhisper
spec:
  stripPrefix:
    prefixes:
      - /whisper
