k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fasterwhisper
  namespace: fasterwhisper
spec:
  selector:
    app: fasterwhisper-api
  ports:
    - port: 80
      targetPort: 8000
      name: http
  type: ClusterIP
